[gd_scene load_steps=20 format=3 uid="uid://df4cptti61gjf"]

[ext_resource type="Script" uid="uid://c6ookd8igxpbd" path="res://scenes/player/player.gd" id="1_8afob"]
[ext_resource type="Script" uid="uid://d0gqgbr6j57ku" path="res://scenes/player/head.gd" id="2_0owmy"]
[ext_resource type="Script" uid="uid://d2hchdfcm54xq" path="res://scenes/player/player_gui.gd" id="2_fcs02"]
[ext_resource type="Script" uid="uid://g3oyeat67n0i" path="res://scripts/states/State_Machine.gd" id="3_gmlin"]
[ext_resource type="PackedScene" uid="uid://cqseil26u8ago" path="res://scenes/player/ui/hotbar_ui.tscn" id="3_myrg7"]
[ext_resource type="PackedScene" uid="uid://c608uaatt5mr6" path="res://scenes/ui/Reticle.tscn" id="4_kvlxm"]
[ext_resource type="Script" uid="uid://b7gd5fncajrhf" path="res://scripts/Player_Stats.gd" id="4_lvxji"]
[ext_resource type="Script" uid="uid://blm1er027g3ae" path="res://scenes/player/states/movement/Walking.gd" id="4_p47bc"]
[ext_resource type="Resource" uid="uid://bbv1n18l8nhma" path="res://scenes/player/states/resources/player_inventory.tres" id="5_fm80t"]
[ext_resource type="Resource" uid="uid://c0ajcrf01ge0x" path="res://scenes/player/states/resources/player_config.tres" id="5_je7p5"]
[ext_resource type="Script" uid="uid://3uouxr0i3o4g" path="res://scenes/player/states/movement/Sprinting.gd" id="5_p47bc"]
[ext_resource type="Script" uid="uid://df6uony5jsrkw" path="res://scenes/player/states/movement/Crouching.gd" id="6_75vfm"]
[ext_resource type="Script" uid="uid://cocnkjd2dqw2i" path="res://scenes/player/states/interaction/In_Inventory.gd" id="10_h17s1"]
[ext_resource type="Script" uid="uid://b02xxwca4h31" path="res://scenes/player/states/movement/In_Menu.gd" id="12_fm80t"]
[ext_resource type="Script" uid="uid://8adk86412iwr" path="res://scripts/components/Component_Manager.gd" id="13_gx1jg"]
[ext_resource type="Script" uid="uid://dci8rdc84d813" path="res://scenes/player/states/interaction/Exploring.gd" id="14_kvlxm"]
[ext_resource type="Script" uid="uid://chr7p01seflwc" path="res://scripts/components/Inventory_Component.gd" id="14_ugbui"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_x7p2l"]
height = 1.55

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_fcs02"]
points = PackedVector3Array(0.468358, 0.371107, 0.143449, -0.484562, -0.372516, -0.0654133, -0.486334, -0.373866, 0.0510526, 0.285926, -0.680386, -0.0425134, 0.0510526, 0.373866, -0.486334, -0.157527, 0.439465, 0.443907, 0.0742342, -0.419589, 0.470542, -0.27667, 0.679349, -0.089249, 0.190263, -0.418429, -0.437298, -0.296631, -0.370586, -0.389377, -0.113637, -0.755334, -0.0663782, 0.423297, 0.442107, -0.205101, 0.470567, -0.419465, 0.0742378, 0.122521, 0.756937, 0.0279962, -0.462199, 0.37331, -0.158894, 0.25839, 0.346278, 0.420111, -0.272378, -0.461301, 0.373387, -0.434061, 0.346185, 0.235155, 0.467292, -0.34705, -0.157621, -0.204145, 0.509849, -0.389688, 0.375017, -0.393809, 0.305574, 0.0749977, -0.706907, 0.240001, 0.121336, 0.655604, -0.300047, -0.0895207, 0.657095, 0.30947, 0.304565, 0.346196, -0.388117, -0.113051, -0.657558, -0.300955, -0.088864, -0.349537, -0.485064, 0.306985, 0.605075, 0.213768, -0.299969, -0.655643, 0.121439, -0.272781, 0.34648, -0.411449, -0.346041, -0.60743, -0.135778, -0.0657055, 0.2801, 0.494667)

[node name="Player" type="Node3D"]
script = ExtResource("1_8afob")

[node name="PlayerGUI" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("2_fcs02")

[node name="HotbarUI" parent="PlayerGUI" instance=ExtResource("3_myrg7")]
unique_name_in_owner = true
layout_mode = 1

[node name="Reticle" parent="PlayerGUI" instance=ExtResource("4_kvlxm")]
unique_name_in_owner = true
layout_mode = 1

[node name="PlayerBody" type="CharacterBody3D" parent="."]
unique_name_in_owner = true

[node name="Head" type="Node3D" parent="PlayerBody"]
unique_name_in_owner = true
transform = Transform3D(1, 4.35138e-05, 0.000148814, -4.35138e-05, 1, 8.0142e-05, -0.000148814, -8.0142e-05, 1, 0, 0, 0)
script = ExtResource("2_0owmy")

[node name="PlayerCamera" type="Camera3D" parent="PlayerBody/Head"]
unique_name_in_owner = true
fov = 100.0

[node name="InteractCast" type="RayCast3D" parent="PlayerBody/Head/PlayerCamera"]
unique_name_in_owner = true
transform = Transform3D(0.99997, -0.000714735, 0.00766991, 0.000674282, 0.999986, 0.00527984, -0.00767358, -0.00527451, 0.999957, 0, 0, 0)
target_position = Vector3(0, 0, -3.5)
collision_mask = 4
debug_shape_custom_color = Color(0.851448, 0.369859, 7.70092e-07, 1)

[node name="MeshInstance3D" type="MeshInstance3D" parent="PlayerBody"]
transform = Transform3D(0.999793, 0, 0.0203317, 0, 1, 0, -0.0203317, 0, 0.999793, 0, 0, 0)
visible = false
mesh = SubResource("CapsuleMesh_x7p2l")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerBody"]
shape = SubResource("ConvexPolygonShape3D_fcs02")

[node name="PlayerStats" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_lvxji")
CONFIG = ExtResource("5_je7p5")

[node name="MovementState" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
unique_name_in_owner = true
script = ExtResource("3_gmlin")
initial_state = NodePath("Walking")

[node name="Walking" type="Node" parent="MovementState"]
script = ExtResource("4_p47bc")

[node name="Sprinting" type="Node" parent="MovementState"]
script = ExtResource("5_p47bc")
state_speed = 8.0
state_height = 1.35

[node name="Crouching" type="Node" parent="MovementState"]
script = ExtResource("6_75vfm")
state_speed = 3.0
state_height = 0.9

[node name="In_Menu" type="Node" parent="MovementState"]
script = ExtResource("12_fm80t")
metadata/_custom_type_script = "uid://b02xxwca4h31"

[node name="InteractingState" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_gmlin")
initial_state = NodePath("Exploring")

[node name="In_Inventory" type="Node" parent="InteractingState"]
script = ExtResource("10_h17s1")

[node name="Exploring" type="Node" parent="InteractingState"]
script = ExtResource("14_kvlxm")

[node name="Component_Manager" type="Node" parent="."]
script = ExtResource("13_gx1jg")
metadata/_custom_type_script = "uid://8adk86412iwr"

[node name="Inventory_Component" type="Node" parent="Component_Manager"]
script = ExtResource("14_ugbui")
inventory = ExtResource("5_fm80t")
metadata/_custom_type_script = "uid://chr7p01seflwc"

[connection signal="ready" from="." to="PlayerGUI/HotbarUI" method="_on_player_ready"]
